SERVER-64635 Remove const in return type of _getSyncSourceReadPreference(WithLock).

Fixes "Coverity analysis defect 121898: Parse warning"